--- a/kuelshammer-ringtheorie/skript.ltx
+++ b/kuelshammer-ringtheorie/skript.ltx
@@ -193,6 +193,7 @@
 \newcommand*{\CL}{\mathcal{L}}
 
 % Frakturbuchstaben
+\newcommand*{\FM}{\mathfrak{M}}
 \newcommand*{\FP}{\mathfrak{P}}
 
 \newcommand*{\bigtimes}{\mathop{\raisebox{-.5ex}{\hbox{\huge{$\times$}}}}}
@@ -214,6 +215,7 @@
 \DeclareMathOperator{\Res}{Res}           % Residuum
 \DeclareMathOperator{\Hom}{Hom}           % Homomorphismus
 \DeclareMathOperator{\End}{End}           % Endomorphismus
+\DeclareMathOperator{\Soc}{Soc}           % Sockel
 
 % Herr Kuelshammer nummeriert mit (i), (ii), ...
 % bei paralist muss das per \setdefaultenum eingestellt werden
@@ -1845,7 +1847,7 @@ Sei $R$ ein Ring.
   $f$ ist genau dann injektiv, wenn $\ker(f)=\{0\}$.
 \end{bemerk}
 
-\begin{satz}[Schurs Lemma]
+\begin{satz}[Schurs Lemma]\label{satz:6.1}
   Für $M,N\in\vorunten{R}\kat{Mod}$ gilt:
   \begin{enumerate}
    \item Sei $M$ einfach und $0\neq f\in\Hom_{R}(M,N)$. Dann ist $f$ injektiv.
@@ -1864,7 +1866,7 @@ Sei $R$ ein Ring.
   konstruieren.
 \end{defini}
 
-\begin{bemerk}
+\begin{bemerk}\label{bem:6.2}
   \begin{enumerate}
    \item Für jedes Linksideal $M\subseteq R$ gilt, $M$ ist genau dann maximal,
     wenn $R/M$ ein einfacher $R$"~Modul ist und $M$ ist genau dann minimal, wenn
@@ -1928,7 +1930,7 @@ Sei $R$ ein Ring.
 \end{bemerk}
 
 %satz 6.4
-\begin{satz}
+\begin{satz}\label{satz:6.4}
   Für einen $R$"~Modul $M$ sind die folgenden Aussagen äquivalent:
   \begin{enumerate}[(1)]
    \item $M$ lässt sich als Summe einfacher Untermoduln schreiben.
@@ -2017,6 +2019,189 @@ Sei $R$ ein Ring.
    \item Analog ist $R$ genau dann rechtshalbeinfach, wenn obige Bedingung
     erfüllt ist. Daher ist "`rechtshalbeinfach"' dasselbe wie
     "`linkshalbeinfach"'.
+  \end{enumerate}
+\end{bemerk}
+
+%Vorlesung vom 3.5.2011
+\chapter{Das Jacobson-Radikal}
+Sei $R$ ein Ring.
+
+%def 7.1
+\begin{defini}
+  Sei $M\in\vorunten{R}\kat{Mod}$. Wie üblich definiert man
+  \highl[Untermodul!maximale]{maximale} und
+  \highl[Untermodul!minimale]{minimale Untermoduln} von $M$. Der Durchschnitt
+  $\rad(M)=\rad_{R}(M)$ aller maximalen Untermoduln von $M$ heißt
+  \highl{Radikal} oder \highl[Jacobson-Radikal]{\textsc{Jacobson}"~Radikal}.
+  Die Summe $\Soc_{R}(M)=\Soc(M)$ aller minimalen Untermoduln von $M$ heißt
+  \highl{Sockel} von $M$.
+\end{defini}
+
+\begin{bemerk}
+  Ein Untermodul $N\subseteq M$ ist genau dann minimal (maximal), wenn $N$
+  ($M/N$) ein einfacher $R$"~Modul ist. $M$ braucht keine minimalen
+  (maximalen) Untermoduln zu haben.  Gegebenenfalls setzt man
+  $\Soc(M)\coloneqq0$ ($\rad(M)\coloneqq M$).
+\end{bemerk}
+
+\begin{satz}\label{satz:7.1}
+  \begin{enumerate}
+   \item Sei $M,N\in\vorunten{R}\kat{Mod}$ und $f\in\Hom_{R}(M,N)$. Dann ist
+    $(\rad(M))\subseteq\rad(N)$.
+   \item Sei $N\subseteq M$ ein Untermodul. Dann ist $\rad(N)\subseteq\rad(M)$
+    und $\rad(M)+N/N\subseteq\rad(M/N)$.
+   \item Sei $N\subseteq \rad(M)$ ein Untermodul. Dann ist $\rad(M/N)=
+    \rad(M)/N$.
+   \item Sei $(M_{i})_{i\in I}$ eine nichtleere Familie von $R$"~Moduln. Dann
+    ist $\rad(\prod_{i\in I}M_{i})\subseteq\prod_{i\in I}\rad(M_{i})$ und
+    $\rad(\coprod_{i\in I}M_{i})= \coprod_{i\in I}(\rad(M_{i}))$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item Sei $L\subseteq M$ ein maximaler Untermodul. Also ist $N/L$
+      einfach. Sei $g\colon N\rightarrow N/L$ kanonisch. Dann ist $g\circ
+      f\in\Hom_{R}(M,N/L)$. Im Fall $g\circ f=0$ ist der Kern $M$. Andernfalls
+      ($g\circ f\neq0$) ist $g\circ f$ nach dem \autoref{satz:6.1}. Also
+      $M/\ker(g\circ f)\simeq N/L$ einfach nach dem \autoref{satz:4.1}, d.\,h.
+      $\ker(g\circ f)\subseteq M$ maximales Untermodul. In beiden Fällen ist
+      $\rad(M)\subseteq\ker(g\circ f)$, d.\,h. $g(f(\rad(M)))=0$. Also
+      $f(\rad(M))\subseteq\ker(G)=L$. Damit folgt die Behauptung.
+     \item Man wende den ersten Punkt auf die Inklusionsabbildung
+      $N\rightarrow M$ an und die kanonische Abbildung $M\rightarrow M/N$.
+     \item Im Fall $N\subseteq\rad(M)$ entsprechen sich die maximalen
+      Untermoduln von $M$ und von $M/N$ nach dem Korrespondenzsatz
+      (\autoref{bem:5.3} Punkt~(vi)).
+     \item Sei $j\in I$ und $p_{j}\colon\prod_{i\in I} M_{i}\rightarrow
+      M_{j}$. Wegen des ersten Punktes ist $p_{j}(\rad(\prod_{i\in I}
+      M_{i}))\subseteq\rad(M_{j})$. Daher $\rad(\prod_{i\in I}M_{i})\subseteq
+      \prod_{i\in I}\rad(M_{i})$.
+
+      Wegen des zweiten Punktes folgt, $\rad(\coprod_{i\in I} M_{i})\subseteq
+      \coprod(\prod_{i\in I} M_{i})\subseteq\prod_{i\in I}\rad(M_{i})$. Daher
+      hat man sogar, dass $\rad(\coprod_{i\in I}M_{i})\subseteq\coprod_{i\in
+      I} \rad(M_{i})$.
+
+      Sei $j\in I$ und betrachten den Injektor $q_{j}\colon M_{j}\rightarrow\coprod_{i\in
+      I}M_{i}$. Wegen des ersten Punktes gilt,
+      $q_{j}(\rad(M_{j}))\subseteq\rad(\coprod_{i\in I} M_{i})$. Daher erhält
+      man $\coprod_{i\in I} \rad(M_{j})= \sum_{j\in I}
+      q_{j}(\rad(M_{j}))\subseteq\rad(\coprod_{i\in I}M_{i})$. Damit folgt die
+      Behauptung.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+%satz 7.2
+\begin{satz}\label{satz:7.2}
+  Für $M\in\vorunten{R}\kat{Mod}$ gilt:
+  \begin{enumerate}
+   \item $\rad(M)=0\Leftrightarrow M$ ist zu einem Untermodul eines direkten
+    Produkts einfacher Moduln isomorph.
+   \item Sei $M$ halbeinfach. Dann ist $\rad(M)=0$. Im Allgemeinen gilt nur
+    die eine Richtung.
+   \item $M\in\vorunten{R}\kat{mod}$ und halbeinfach genau dann, wenn $M$
+    artinsch und $\rad(M)=0$.
+   \item $0\neq M\in\vorunten{R}\kat{mod}\Rightarrow\rad(M)\neq M$.
+  \end{enumerate}
+  \begin{proof}
+    \begin{enumerate}
+     \item
+      \begin{itemize}
+       \item["`$\Rightarrow$"'] Sei $\rad(M)=0$ und $\FM$ die Menge der
+	maximalen Untermoduln von $M$. Dann ist $f\colon
+	M\rightarrow\prod_{N\in\FM} M/N$ mit $m\mapsto(m+N)_{N\in\FM}$ eine
+	$R$"~lineare Abbildung mit dem Kern $\ker(f)=\bigcap_{N\in\FM}
+	N=\rad(M)=0$. Daher ist $M\simeq\Bld(f)\subseteq\prod_{N\in\FM} M/N$
+	Untermodul.
+       \item["`$\Leftarrow$"'] Sei $(S_{i})_{i\in I}$ eine nichtleere Familie
+	einfacher $R$"~Moduln und $f\colon M\rightarrow\prod_{i\in I} S_{i}$
+	ein $R$"~Monomorphismus. Wegen \autoref{satz:7.1} ist
+	$f(\rad(M))\subseteq\rad(\prod_{i\in I} S_{i})\subseteq\prod_{i\in I}
+	\rad(S_{i})=0$. Da $f$ injektiv ist, ist $\rad(M)=0$. 
+      \end{itemize}
+     \item folgt aus dem obigen Punkt und dem \autoref{satz:6.4}.
+     \item
+      \begin{itemize}
+       \item["`$\Rightarrow$"'] Sei $M=Rm_{1}+\dotsb+ Rm_{n}$ mit
+	$m_{1},\dotsc, m_{n}\in M$. Ist $M$ halbeinfach, so ist
+	$M=\bigoplus_{i\in I} M_{i}$ mit einfachen Untermoduln $M_{i}$ für
+	$i\in I$. Dann existiert eine Teilmenge $J\subseteq I$ endlich mit
+	$m_{1},\dotsc, m_{n}\in\bigoplus_{j\in J} M_{j}$. Also
+	$M\subseteq\bigoplus_{j\in J} M_{j}$. Jedes $M_{j}$ ist artinsch.
+	Somit ist auch $M$ artinsch\todo{entsprechenden Satz verlinken}. Wegen
+	des zweiten Punkts ist $\rad(M)=0$.
+       \item["`$\Leftarrow$"'] Sei $M$ artinsch und $\rad(M)=0$. Sei
+	\OE{} $M\neq0$. Dann: $\FM\coloneqq\Set{N | N\text{ Durchschnitt
+	endlich vieler maximaler Untermoduln von } M}$. Es ist
+	$\FM\neq\emptyset$, da $M\in\FM$. Folglich enthält $\FM$ ein minimales
+	Element~$D$. Für jeden maximalen Untermodul~$L\subseteq M$ ist $D\cap
+	L\in\FM$. Da $D$ minimal ist, gilt, $D=D\cap L\subseteq L$. Dies
+	zeigt, dass $D\subseteq\rad(M)=0$. Also existieren endlich viele
+	Untermoduln $M_{1},\dotsc, M_{n}\subseteq M$ mit $M_{1}\cap\dotsb\cap
+	M_{n}=0$. Daher ist $f\colon M\rightarrow M/M_{1}\times\dotso \times
+	M/M_{n}$ mit $m\mapsto(m+M_{1},\dotsc, m+M_{n})$ ein
+	$R$"~Monomorphismus. Da $M/M_{1},\dotsc, M/M_{n}$ noethersch sind, ist
+	das direkte Produkt ebenso noethersch wie auch $M$ selbst.
+      \end{itemize}
+     \item Sei $0\neq M\in\vorunten{R}\kat{mod}$ und $M=Rm_{1}+\dotsb+
+      Rm_{n}$. Weiter sei \OE{} $n$ miminal. Dann: $N\coloneqq Rm_{2}+\dotsb+
+      Rm_{n}\neq M$ und $0\neq M/N=R(m_{1}+N)$. Also ist $f\colon R\rightarrow
+      M/N$ mit $r\mapsto r(m_{1}+N)$ ein $R$"~Epimorphismus mit dem Kern
+      $\ker(f)\neq R$. Nach der \autoref{bem:6.2} Punkt~(ii) existiert ein
+      maximales Linksideal $L\subseteq R$ mit $\ker(f)\subseteq L$. Dann ist
+      $L/\ker(f)\subseteq R/\ker(f)$ ein maximaler Untermodul, d.\,h.
+      $\rad(R/\ker(f))\neq R/\ker(f)$. Wegen $M/N\simeq R/\ker(f)$ ist auch
+      $\rad(M/N)\neq M/N$. Nach dem \autoref{satz:7.1} Punkt~(ii) ist
+      $\rad(M)+N/N\neq M/N$, also auch $\rad(M)\neq M$.
+    \end{enumerate}
+  \end{proof}
+\end{satz}
+
+%satz 7.3
+\begin{satz}[Nakayamas Lemma]\label{satz:7.3}
+  Sei $M\in\vorunten{R}\kat{mod}$ und $N\subseteq M$ Untermodul mit
+  $M=n+\rad(M)$. Dann folgt, $N=M$.
+  \begin{proof}
+    $\rad(M/N)\supseteq\rad(M)+N/N=M/N\Rightarrow M/N=0\Rightarrow M=N$
+  \end{proof}
+\end{satz}
+
+%satz 7.4
+\begin{satz}
+  Sei $m\in M\in\vorunten{R}\kat{mod}$. Dann gilt $m\in\rad(M)$ genau dann,
+  wenn für jeden Untermodul $N\subseteq M$ mit $M=N+Rm$ ist $M=N$.
+  \begin{proof}
+    \begin{itemize}
+     \item["`$\Rightarrow$"'] Sei $m\in\rad(M)$ und $N\subseteq M$ Untermodul
+      mit $M= N+Rm$. Dann ist $M=N+\rad(M)$, d.\,h. $M=N$ nach
+      \autoref{satz:7.3}.
+     \item["`$\Leftarrow$"'] Sei $m\in M\setminus\rad(M)$. Dann existiert ein
+      maximaler Untermodul $N\subseteq M$ mit $m\notin N$. Daher $N+Rm=M$,
+      aber $M\neq N$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+%def 7.5
+\begin{defini}
+  $J(R)\coloneqq\rad(\vorunten{R}R)$ heißt \highl{Radikal} oder
+  \highl[Jacobson-Radikal]{\textsc{Jacobson}"~Radikal} von $R$.
+\end{defini}
+
+\begin{bemerk}
+  \begin{enumerate}
+   \item $J(R)$ ist also der Durchschnitt aller maximalen Linksideale von $R$.
+    Bald werden wir sehen, dass dies auch für den Durchschnitt aller maximalen
+    Rechtsideale von $R$ gilt.
+   \item $R\neq0\Rightarrow J(R)\neq R$ nach dem \autoref{satz:7.2} Punkt~(iv).
+   \item Sei $m\in M\in\vorunten{R}\kat{Mod}$. Dann ist $f\colon R\rightarrow M$
+    mit $r\mapsto r\cdot m$ eine $R$"~lineare Abbildung. Daher
+    $J(R)m=f(\rad(\vorunten{R}R))\subseteq(M)$. Daher ist
+    $J(R)M\subseteq\rad(M)$. Insbesondere ist $J(R)R\subseteq J(R)$, d.\,h.
+    $J(R)\trianglelefteq R$.
+   \item Für $I\trianglelefteq R$ ist $J(R)+I/I\subseteq\rad(R/I)=J(R/I)$
+    wegen \autoref{satz:7.1}. Falls $I\subseteq J(R)$, ist sogar
+    $J(R/I)=J(R)/I$. Insbesondere ist $J(R/J(R))=0$.
   \end{enumerate}
 \end{bemerk}
 
