--- a/richter-geozerl/skript.ltx
+++ b/richter-geozerl/skript.ltx
@@ -141,6 +141,7 @@
 \newcommand*{\Q}{\mathbb{Q}}      % gebrochene Zahlen
 \newcommand*{\Z}{\mathbb{Z}}      % ganze Zahlen
 
+\newcommand*{\FM}{\mathfrak{M}}      % Fraktur-M
 \newcommand*{\FT}{\mathfrak{T}}      % Fraktur-T
 \newcommand*{\FV}{\mathfrak{V}}      % Fraktur-V
 
@@ -149,6 +150,7 @@
 \newcommand*{\CO}{\mathcal{O}}      % Cal-O
 
 \newcommand*{\id}{\mathrm{id}}             % Identität
+\newcommand*{\dotcup}{\ensuremath{\mathaccent\cdot\cup}}
 
 % Wenn irgendwo Unklarheiten zum Inhalt im Skript auftreten, können sie
 % einfach mit \help{Ich verstehe das nicht} hervorgehoben werden. Dies
@@ -435,7 +437,7 @@
   \end{enumerate}
 \end{bsp}
 
-\subsection{Bedingung für m-Teilbarkeit}
+\subsection{Bedingung für m-Teilbarkeit}\label{sec:1.2.2}
 %satz 1
 \begin{satz}\label{satz:1}
   Seien $K$ eine konvexe Teilmenge eines linearen Raumes~$X$, $G$ eine Gruppe
@@ -1554,6 +1556,207 @@
   \end{enumerate}
 \end{bemerk}
 
+%Vorlesung vom 18.5.2011
+\begin{folg}
+  Im Raum $(\R^{n}, \norm{\cdot}_{2})$ mit $n\geq3$ gibt es konvexe Körper
+  $K_{n}\subseteq\R^{n}$, die für alle $m\geq22$ isometrisch $m$"~teilbar sind.
+  \begin{proof}
+    Es ist bekannt, dass bei $n=3$ gilt: $K_{3}=B(0,1)$. Dies ist in
+    isometrisch kongruente Teile $M_{1},\dotsc, M_{m}$ zerlegbar mit
+    $M_{i}=\phi_{i}(M_{1})$. Für $n>3$ erfolgt "`Zylinderbildung"':
+    $K_{n}\coloneqq K_{3}\times[0,1]^{n-3}\subseteq\R^{n}$ ist konvex,
+    kompakt und in isometrisch kongruente Teile
+    $M_{1}\times[0,1]^{n-3},\dotsc, M_{m}\times[0,1]^{n-3}$ zerlegbar mit
+    $M_{i}\times[0,1]^{n-3}=
+    \phi_{i}\times\id_{\R^{n-3}}(M_{i}\times[0,1]^{n-3})$.
+  \end{proof}
+\end{folg}
+
+\begin{bemerk}
+  Weitere offene Fragen:
+  \begin{itemize}
+   \item Gibt es in $(\R^{2}, \norm{\cdot}_{2})$ isometrisch $m$"~teilbare
+    konvexe Körper für ein $m\geq2$?
+   \item Sind Kugeln in $(\R^{n}, \norm{\cdot}_{2})$ für $n\nmid3$ und $n>3$
+    teilbar?
+   \item Bestimmung der optimalen (d.\,h. minimaler) Teileanzahlen bei
+    teilbaren Körpern.
+  \end{itemize}
+\end{bemerk}
+
+%1.5
+\section{Die affine Nichtzweiteilbarkeit konvexer Kompakta}
+\subsection{Vorbereitungen}
+
+% def 10
+\begin{defini}
+  Sei $M$ eine Teilmenge eines topologischen Raumes $(R,\CO)$.
+  \begin{enumerate}[a)]
+   \item $M$ heißt genau dann \highl{kompakt}, wenn $\forall\FM\subseteq\CO$
+    gilt, $\FM$ ist Überdeckung von
+    $M\Rightarrow\FM'\subseteq\FM\colon(\abs{\FM'}<\infty\wedge\FM')$ ist
+    Überdeckung von $M$.
+   \item $M$ heißt genau dann \highl{folgenkompakt}, wenn jede Folge
+    $(x_{n})_{n=1}^{\infty}\subseteq M$ besitzt eine konvergente Teilfolge
+    $(x_{n_{k}})_{k=1}^{\infty}$ mti $\lim_{k\rightarrow\infty} x_{n_{k}}\in M$.
+  \end{enumerate}
+\end{defini}
+
+%hs 3
+\begin{satz}\label{satz:hs3}
+  \begin{enumerate}[(a)]
+   \item Das stetige Bild einer kompakten Menge ist kompakt.
+   \item Jede abgeschlossene Teilmenge einer kompakten Menge ist wieder kompakt.
+   \item Eine Teilmenge eines metrischen Raumes ist genau dann kompakt, wenn
+    sie folgenkompakt ist. Insbesondere sind kompakte Teilmengen metrischer
+    Räume beschränkt und abgeschlossen.
+   \item (Satz von \textsc{Heine}"~\textsc{Borel}) Ist $\CK$ eine nichtleere
+    Familie kompakter Teilmengen eines metrischen Raumes derart, dass jede
+    endliche Teilfamilie $\CK'\subseteq\CK$ einen nichtleeren Durchschnitt
+    hat, so ist auch $\bigcap\CK$ nichtleer und kompakt.
+   \item (Satz von \textsc{Bolzano}"~\textsc{Weierstraß}) Eine Teilmenge eines
+    endlich"=dimensionalen normierten Raumes $\R^{n}$ ist genau dann, wenn sie
+    beschränkt und abgeschlossen ist.
+  \end{enumerate}
+  \begin{proof}
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}[(a)]
+   \item Abgrenzung der Aussage e im \autoref{satz:hs3}: Eine abgeschlossene
+    und beschränkte Teilmenge eines vollständigen normierten Raumes ist im
+    Allgemeinen \emph{nicht} kompakt. Beispielsweise ist $\ell_{\infty}=
+    \Set{(\xi_{1},\xi_{2},\dotsc) | \xi_{i}\in\R, \sup\Set{\abs{\xi_{i}} |
+    i\geq1}<\infty}$ mit der Norm $\norm{(\xi_{1},\xi_{2},\dotsc)}_{\infty}=
+    \sup\Set{\abs{\xi_{i}} | i\geq1}$ vollständig. Die Einheitskugel $B(0,1)=
+    \Set{(\xi_{1},\xi_{2},\dotsc) | \abs{\xi_{i}}\leq1}$ ist nicht
+    (folgen"~)""kompakt. Denn die Folge $((1,0,0,\dotsc), (0,1,0,\dotsc),
+    (0,0,1,0,\dotsc),\dotsc)$ keine konvergente Teilfolge hat.
+   \item Die Menge $M=\Set{(\xi_{1},\xi_{2},\dotsc) |
+    \abs{\xi_{i}}\leq2^{-i}}$ ist kompakt. Denn man kann eine Folge
+    $(x_{i})_{i=1}^{\infty}\subseteq M$ betrachten.
+    \missingfigure{Halbierter Würfel}
+    Im ersten Schritt wird $M$ in zwei Teile der Kantenlänge $\leq2^{-1}$
+    senkrecht zur ersten Koordinaten geteilt. Ein Teil enthält eine unendliche
+    Teilfolge $(x_{i}^{(1)})$ von $(x_{i})$. Im zweiten Schritt wird der Teil
+    aus dem ersten Schritt in vier Teile von Kantenlänge $\leq2^{-2}$
+    senkrecht zu $e_{1}$- und $e_{2}$"~Richtung. Ein Teil  enthält wieder eine
+    unendliche Teilfolge $(x_{i}^{(2)})$ von $(x_{i}^{(1)})$. Wenn man das
+    fortsetzt, ist die Diagonalfolge $(x_{i}^{(i)})$ die gesuchte konvergente
+    Teilfolge.
+  \end{enumerate}
+\end{bemerk}
+
+%satz 5
+\begin{satz}
+  Die abgeschlossene Einheitskugel eines unendlich"=dimensionalen normierten
+  Raumes $X$ ist \emph{nicht} kompakt. Insbesondere (mit \autoref{satz:hs3}
+  Punkt~(e)) ist ein normierter Raum genau dann endlich"=dimensional, wenn
+  seine abgeschlossene Einheitskugel $B(0,1)$ kompakt ist.
+  \begin{proof}
+    Wir nehmen an, dass $B(0,1)$ kompakt ist und betrachten eine Überdeckung
+    durch das System $\Set{\mathring{B}(x,\nicefrac{1}{2}) | x\in B(0,1)}$
+    offener Kugeln. Also existieren $x_{1},\dotsc, x_{k}\in B(0,1)$ mit
+    $B(0,1)\subseteq\bigcup_{i=1}^{k} \mathring{B}(x_{i}, \nicefrac{1}{2})$.
+    Dazu betrachten wir eine Basis $y_{1},\dotsc, y_{l}$ von
+    $\spn\{x_{1},\dotsc, x_{k}\}$ und wähle ein $n\geq l$ so, dass $2^{n}>k$
+    gilt. Wir fixieren $y_{l+1},\dotsc, y_{n}\in X$ so, dass $y_{1},\dotsc,
+    y_{n}$ linear unabhängig sind. Setze $X_{1}=\spn\{y_{1},\dotsc, y_{n}\}$.
+    Im $n$"~dimensionalen Raum $X_{1}$ gilt,
+    $B_{(x_{1})}(0,1)\subseteq\bigcup_{i=1}^{k} \mathring{B}_{(x_{1})}(x_{i},
+    \nicefrac{1}{2})$. Damit ist $\vol(B_{(x_{1})}(0,1))\leq\sum_{i=1}^{k}
+    \vol(\mathring{B}_{(x_{1})} (x_{i},\nicefrac{1}{2}))= \sum_{i=1}^{k}
+    (\nicefrac{1}{2})^{n} \vol(B_{(x_{1})}(0,1))$. Wenn wir beide Seiten
+    dividieren, ergibt sich $1\leq k(\nicefrac{1}{2})^{n}$ und damit wäre
+    $2^{n}\leq k$\lightning{}
+  \end{proof}
+\end{satz}
+
+%def 11
+\begin{defini}
+  Eine Bijektion $\phi\colon R_{1}\rightarrow R_{2}$ zwischen topologischen
+  Räumen $(R_{1},\CO_{1})$ und $(R_{2}, \CO_{2})$ heißt
+  \highl{Homöomorphismus}, wenn $\phi$ und $\phi^{-1}$ stetig sind.
+\end{defini}
+
+\paragraph{Ein Fixpunktsatz}
+%satz 6
+\begin{satz}[Spezialfall eines Satzes von \textsc{Markov}"~\textsc{Kakutani}]\label{satz:6}
+  Es seien $(X,\norm{\cdot})$ ein normierter Raum, $K\subseteq X$ nichtleer,
+  konvex und kompakt und $\phi\colon X\rightarrow X$ eine stetige affine
+  Abbildung mit $\phi(K)\subseteq K$. Dann besitzt $\phi$ einen Fixpunkt
+  $x_{0}$ in $K$.
+  \begin{proof}
+    \begin{itemize}
+     \item Für $n\geq1$ sei $\phi_{n}\coloneqq\nicefrac{1}{n}
+      (I+\phi+\phi^{2}+\dotsb+\phi^{n-1})\colon X\rightarrow X$ eine affine
+      und stetige Abbildung. Außerdem betrachten wir eine Menge
+      $M\coloneqq\bigcap_{n\geq1} \phi_{n}(K)$.
+      \begin{enumerate}
+       \item $\phi_{n}(K)$ ist kompakt nach \autoref{satz:hs3}.
+       \item Der Durchschnitt von endlich vielen der Mengen $\phi_{n}(K)$ mit
+	$n\geq1$ ist nichtleer. Es gilt nämlich,
+	$\phi_{n_{1}}(K)\cap\phi_{n_{2}}(K)\cap\dotsb\cap\phi_{n_{l}}(K)\supseteq
+	\phi_{n_{1}}\circ\dotso \circ\phi_{n_{l}}(K)\neq\emptyset$. Denn: Für
+	$x\in K$ und $i\in\{1,\dotsc,l\}$ gilt,  $\phi_{n_{i}}(x)=
+	\nicefrac{1}{n_{i}} x+
+	\nicefrac{1}{n_{i}}\phi(x)+\dotsb+\nicefrac{1}{n_{i}}\phi^{n_{i}-1}(x)\in
+	K$, da das eine Konvexkombination ist. Deshalb
+	$\phi_{n_{1}}\circ\dotso \circ \phi_{n_{l}}(K)=
+	\phi_{n_{i}}\circ\phi_{n_{1}}\circ\dotso
+	\circ\phi_{n_{i-1}}\circ\phi_{n_{i+1}}\circ\dotso
+	\circ\phi_{n_{l}}(K)\subseteq\phi_{n_{i}}(K)$. Die Umgruppierung geht,
+	da $\phi$ affin ist. Also $\phi_{n_{1}}\circ\dotso
+	\circ\phi_{n_{l}}(K)\subseteq
+	\phi_{n_{1}}(K)\cap\dotsb\cap\phi_{n_{l}}$. 
+      \end{enumerate}
+     \item Wähle $x_{0}\in M\subseteq\phi_{1}(K)\subseteq K$. Für jedes
+      $n\geq1$ existiert ein $x_{n}\in K$ mit $x_{0}=\phi_{n}(x_{n})$. Es
+      gilt, $\norm{x_{0}- \phi(x_{0})}= \norm{\phi_{n}(x_{n})-
+      \phi(\phi_{n}(x_{n}))}= \norm{\nicefrac{1}{n} x_{n}- \nicefrac{1}{n}
+      \phi^{n}(x_{n})}\leq\nicefrac{1}{n}
+      (\norm{x_{n}}+\norm{\phi^{n}(x_{n})})\leq \nicefrac{2}{n} \max_{x\in K}
+      \norm{x}$ da $K$ beschränkt nach \autoref{satz:hs3}. Für
+      $n\rightarrow\infty$ geht das gegen $0$, also ist
+      $\norm{x_{0}-\phi(x_{0})}=0$, d.\,h. $x_{0}=\phi(x_{0})$.
+    \end{itemize}
+  \end{proof}
+\end{satz}
+
+\subsection{Die Unteilbarkeitsaussage}
+
+%hs4
+\begin{satz}\label{satz:hs4}
+  Sei $K\neq\emptyset$ eine konvexe kompakte Teilmenge eines normierten Raumes
+  $X$ zerlegbar in $K=A\dotcup B$ mit $\phi(A)=B$, wobei $\phi$ ein
+  konvexitätserhaltender Homöomorphismus $\phi\colon K\rightarrow K$ ist. Dann
+  existiert ein $\tilde{K}\subseteq K$ mit $\tilde{K}\neq\emptyset$, konvex,
+  kompakt mit $\phi(\tilde{K})=\tilde{K}$.
+\end{satz}
+
+%satz 7
+\begin{satz}[Satz von \textsc{Edelstein}]\label{satz:7}
+  Keine nichtleere konvexe kompakte Teilmenge $K$ eines normierten Raumes $X$
+  ist bezüglich der Gruppe der affinen Homöomorphismen  $2$"~teilbar.
+  \begin{proof}
+    Wir verwenden den \autoref{satz:hs4} auf die Situation von
+    \autoref{satz:7} und erhalten eine kompakte, konvexe und nichtleere Menge
+    $\tilde{K}\subseteq K$ mti $\phi(\tilde{K})= \tilde{K}$. Die Anwendung von
+    \autoref{satz:6} liefert $x_{0}\in\tilde{K}\subseteq K$ mit
+    $\phi(x_{0})=x_{0}$. Damit liegt $x_{0}$ genau dann in einem
+    Zerlegungsteil von $K$, wenn es im anderen liegt. Dies ist ein Widerspruch
+    zur Zerlegungseigenschaft.
+  \end{proof}
+\end{satz}
+
+\begin{bemerk}
+  \begin{enumerate}[(a)]
+   \item Was gilt für analoge $m$"~Teilbarkeit, wenn $m\geq3$ gilt?
+   \item Gibt es in $\R^{2}$ zweidimensionale konvexe Körper (Scheiben), die
+    für ein $m\geq3$ bezüglich affiner Homöomorphismen $m$"~teilbar sind?
+  \end{enumerate}
+\end{bemerk}
 
 \clearpage
 \appendix
